[package]
name = "schwab-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
fastwebsockets = { version = "0.10.0", features = ["unstable-split", "upgrade"] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["http1", "client"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
reqwest = { version = "0.13.3", features = ["json"] }
rustls-pki-types = "1.14.1"
rustls-platform-verifier = "0.7.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde_with = "3.20.0"
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["net", "rt", "rt-multi-thread", "macros", "time"] }
tokio-rustls = "0.26.4"
